# solvation-analysis

./: .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  meta.yaml  paper.bib  paper.md  pyproject.toml  rdf_fitting_demo.ipynb  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  draft-pdf.yml
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.ipynb  getting_started.rst  index.rst  make.bat  requirements.yaml  tutorials.rst
docs/api/: analysis_library.rst  coordination.rst  networking.rst  pairing.rst  plotting.rst  residence.rst  selection.rst  solute.rst  solution.rst  speciation.rst
docs/tutorials/: basics_tutorial.ipynb  clustering_and_residence_tutorial.ipynb  multi_atom_solutes.ipynb  plotting_tutorial.ipynb  rdf_fitting_demo.ipynb  setup_eax_solutes.py  visualization_tutorial.ipynb
joss_paper/: paper.bib  paper.md
solvation_analysis/: __init__.py  _column_names.py  _utils.py  _version.py  analysis.py  analysis_library.py  coordination.py  networking.py  pairing.py  plotting.py  rdf_parser.py  residence.py  selection.py  solute.py  solution.py  solvation.py  speciation.py  visualization.py
solvation_analysis/tests/: conftest.py  datafiles.py  test_analysis.py  test_analysis_library.py  test_basics.py  test_coordination.py  test_networking.py  test_pairing.py  test_plotting.py  test_rdf_parser.py  test_residence.py  test_selection.py  test_solute.py  test_solution.py  test_solvation.py  test_solvation_analysis.py  test_speciation.py
solvation_analysis/tests/data/: README.md  bn_fec.data  bn_fec_elements.csv  ea_fec.dcd  polymer_short_wrap.dcd
solvation_analysis/tests/data/bn_fec_data/: bn_fec_short_unwrap.dcd  bn_fec_short_wrap.dcd  bn_solv_df_large.csv
tutorials/: basics_tutorial.ipynb  clustering_and_residence_tutorial.ipynb  rdf_fitting_demo.ipynb  tutorial.ipynb  visualization_tutorial.ipynb
(+95 files in other folders)
